--- a/src/main/resources/view/AttendanceWindow.fxml
+++ b/src/main/resources/view/AttendanceWindow.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root title="Attendance" type="javafx.stage.Stage" minWidth="400" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root title="Absentees" type="javafx.stage.Stage" minWidth="400" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
   <scene>
     <Scene>
       <stylesheets>
