--- a/src/main/resources/view/EventListCard.fxml
+++ b/src/main/resources/view/EventListCard.fxml
@@ -32,6 +32,7 @@
             <Label fx:id="date" styleClass="cell_small_label" text="\$date" />
             <Label fx:id="time" styleClass="cell_small_label" text="\$time" />
             <Label fx:id="locationName" styleClass="cell_small_label" text="\$locationName" />
+            <FlowPane fx:id="archive" />
         </VBox>
     </GridPane>
 </HBox>
