--- a/src/main/resources/view/SingleColumnPersonListWindow.fxml
+++ b/src/main/resources/view/SingleColumnPersonListWindow.fxml
@@ -9,9 +9,9 @@
 <?import javafx.stage.Stage?>
 
 <?import javafx.scene.control.Label?>
-<Stage minHeight="600" minWidth="450" title="Reminders" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
+<Stage fx:id="stage" minHeight="600" minWidth="450" title="\$stage" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
     <icons>
-        <Image url="@/images/exclamation_icon.png" />
+        <Image url="@/images/address_book_32.png" />
     </icons>
     <scene>
         <Scene>
