Add Command Manager and fix Major bugs

--- a/src/main/resources/view/prescription/PrescriptionListCard.fxml
+++ b/src/main/resources/view/prescription/PrescriptionListCard.fxml
@@ -24,9 +24,9 @@
                         <Region fx:constant="USE_PREF_SIZE" />
                     </minWidth>
                 </Label>
-                <Label fx:id="drugName" text="\$first" styleClass="cell_big_label" />
+                <Label fx:id="date" text="\$first" styleClass="cell_big_label" />
             </HBox>
-            <Label fx:id="date" styleClass="cell_small_label" text="\$date" />
+            <Label fx:id="drugName" styleClass="cell_small_label" text="\$date" />
             <Label fx:id="instruction" styleClass="cell_small_label" text="\$instruction" />
         </VBox>
     </GridPane>
