--- a/src/main/resources/view/HelpWindow.fxml
+++ b/src/main/resources/view/HelpWindow.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.stage.Stage?>
 
 <fx:root resizable="false" title="Help" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
@@ -26,6 +27,9 @@
             <HBox.margin>
               <Insets right="5.0" />
             </HBox.margin>
+                  <font>
+                     <Font size="16.0" />
+                  </font>
           </TextArea>
           <Button fx:id="openUserGuideButton" mnemonicParsing="false" onAction="#openUG" text="Open User Guide" wrapText="true">
             <HBox.margin>
