Add max width to buttons container to prevent overlapping when window is reduce.

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -44,13 +44,17 @@
           <padding>
             <Insets bottom="5" left="10" right="10" top="5" />
           </padding>
-               <StackPane maxWidth="300.0" prefHeight="150.0" prefWidth="200.0" StackPane.alignment="CENTER_RIGHT">
+               <StackPane maxWidth="425.0" StackPane.alignment="CENTER_RIGHT">
                   <children>
-                     <Button fx:id="resizeButton" alignment="CENTER_RIGHT" onAction="#handleResize" text="Resize Display" textFill="#4b1010" StackPane.alignment="CENTER_LEFT" />
-                      <Button fx:id="importButton" onAction="#handleImport" text="Import" StackPane.alignment="CENTER_LEFT" translateX="-150">
-                      </Button>
                 <Button fx:id="emailButton" onAction="#handleEmailWindow" text="Show Email" StackPane.alignment="CENTER_RIGHT">
           </Button>
+                      <Button fx:id="importButton" onAction="#handleImport" text="Import" StackPane.alignment="CENTER_LEFT">
+                      </Button>
+                     <Button fx:id="resizeButton" alignment="CENTER_RIGHT" onAction="#handleResize" text="Resize Display" textFill="#4b1010" StackPane.alignment="CENTER">
+                        <StackPane.margin>
+                           <Insets right="20.0" />
+                        </StackPane.margin>
+                     </Button>
                   </children>
                </StackPane>
 
@@ -62,7 +66,7 @@
             <Insets bottom="5" left="10" right="10" top="5" />
           </padding>
 
-          <Button fx:id="emailButton" onAction="#handleEmailWindow" text="Show Email" StackPane.alignment="CENTER_RIGHT" >
+          <Button fx:id="emailButton" onAction="#handleEmailWindow" text="Show Email" StackPane.alignment="CENTER_RIGHT">
           </Button>
 
         </StackPane>
