--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -19,7 +19,7 @@
 
 .label-header {
     -fx-font-size: 32pt;
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Segoe UI";
     -fx-text-fill: white;
     -fx-opacity: 1;
 }
@@ -67,7 +67,7 @@
 
 .table-view .column-header .label {
     -fx-font-size: 20pt;
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Segoe UI";
     -fx-text-fill: white;
     -fx-alignment: center-left;
     -fx-opacity: 1;
@@ -217,7 +217,7 @@
 
 .result-display {
     -fx-background-color: transparent;
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Segoe UI";
     -fx-font-size: 13pt;
     -fx-text-fill: black;
 }
@@ -227,7 +227,7 @@
 }
 
 .status-bar .label {
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Segoe UI";
     -fx-text-fill: white;
     -fx-padding: 4px;
     -fx-pref-height: 30px;
@@ -267,7 +267,7 @@
 
 .menu-bar .label {
     -fx-font-size: 14pt;
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Segoe UI";
     -fx-text-fill: white;
     -fx-opacity: 0.9;
 }
@@ -390,7 +390,7 @@
     -fx-background-color: transparent;
     -fx-background-insets: 0;
     -fx-border-insets: 0;
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Segoe UI";
     -fx-font-size: 13pt;
     -fx-text-fill: black;
 }
