Set wrap text for errorLabel

--- a/src/main/resources/view/AddWindow.fxml
+++ b/src/main/resources/view/AddWindow.fxml
@@ -105,7 +105,7 @@
                            <TextField fx:id="modulesField" onAction="#handleEnter" prefHeight="44.0" prefWidth="449.0" promptText="[OPTIONAL] CS3230 CS1231S" />
                         </children>
                      </HBox>
-                     <Label fx:id="errorLabel" alignment="CENTER" prefHeight="57.0" prefWidth="524.0" text="Label">
+                     <Label fx:id="errorLabel" alignment="CENTER" prefHeight="57.0" prefWidth="524.0" text="Label" wrapText="true">
                         <font>
                            <Font size="16.0" />
                         </font>
