--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -19,7 +19,7 @@
 
 .label-header {
     -fx-font-size: 32pt;
-    -fx-font-family: "Helvetica";
+    -fx-font-family: "Arial";
     -fx-text-fill: white;
     -fx-opacity: 1;
 }
@@ -66,7 +66,7 @@
 
 .table-view .column-header .label {
     -fx-font-size: 20pt;
-    -fx-font-family: "Helvetica";
+    -fx-font-family: "Arial";
     -fx-text-fill: white;
     -fx-alignment: center-left;
     -fx-opacity: 1;
@@ -149,7 +149,7 @@
     -fx-border-insets: -3;
     -fx-border-width: 3;
     -fx-border-radius: 7;
-    -fx-font-family: "Helvetica";
+    -fx-font-family: "Arial";
     -fx-font-size: 13pt;
     -fx-text-fill: white;
 }
@@ -171,7 +171,7 @@
     -fx-border-insets: 3;
     -fx-border-width: 3;
     -fx-border-radius: 7;
-    -fx-font-family: "Helvetica";
+    -fx-font-family: "Arial";
     -fx-font-size: 13pt;
     -fx-text-fill: white;
 }
@@ -181,7 +181,7 @@
 }
 
 .status-bar .label {
-    -fx-font-family: "Helvetica";
+    -fx-font-family: "Arial";
     -fx-text-fill: white;
     -fx-padding: 4px;
     -fx-pref-height: 30px;
@@ -223,7 +223,7 @@
 
 .menu-bar .label {
     -fx-font-size: 14pt;
-    -fx-font-family: "Helvetica";
+    -fx-font-family: "Arial";
     -fx-text-fill: white;
     -fx-opacity: 0.9;
 }
@@ -243,7 +243,7 @@
     -fx-border-width: 2;
     -fx-background-radius: 0;
     -fx-background-color: #1d1d1d;
-    -fx-font-family: "Helvetica", Helvetica, Arial, sans-serif;
+    -fx-font-family: "Arial", Arial, sans-serif;
     -fx-font-size: 11pt;
     -fx-text-fill: #d8d8d8;
     -fx-background-insets: 0 0 0 0, 0, 1, 2;
@@ -339,7 +339,7 @@
     -fx-border-insets: -3;
     -fx-border-width: 3;
     -fx-border-radius: 7;
-    -fx-font-family: "Helvetica";
+    -fx-font-family: "Arial";
     -fx-font-size: 13pt;
     -fx-text-fill: white;
 }
@@ -356,7 +356,7 @@
     -fx-border-insets: -3;
     -fx-border-width: 3;
     -fx-border-radius: 7;
-    -fx-font-family: "Helvetica";
+    -fx-font-family: "Arial";
     -fx-font-size: 13pt;
     -fx-text-fill: white;
 }
