--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -28,7 +28,7 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
                <font>
-                  <Font name="Helvetica" size="13.0" />
+                  <Font name="Arial" size="13.0" />
                </font>
         </Label>
         <Label fx:id="name" styleClass="cell_big_label" text="\$first" />
