--- a/src/main/resources/view/CommandBox.fxml
+++ b/src/main/resources/view/CommandBox.fxml
@@ -7,7 +7,7 @@
 <StackPane styleClass="stack-pane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
   <TextField fx:id="commandTextField" onAction="#handleCommandEntered" promptText="Enter command here..." style="-fx-background-radius: 7;">
       <font>
-         <Font name="Helvetica" size="13.0" />
+         <Font name="Arial" size="13.0" />
       </font>
    </TextField>
 </StackPane>
