--- a/src/main/resources/view/ResultDisplay.fxml
+++ b/src/main/resources/view/ResultDisplay.fxml
@@ -7,6 +7,6 @@
 <StackPane fx:id="placeHolder" styleClass="pane-with-border" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
   <TextArea fx:id="resultDisplay" editable="false" prefHeight="200.0" prefWidth="523.0" style="-fx-border-color: #273069;" styleClass="result-display">
       <font>
-         <Font name="Helvetica" size="13.0" />
+         <Font name="Arial" size="13.0" />
       </font></TextArea>
 </StackPane>
