--- a/src/main/resources/view/StatusBarFooter.fxml
+++ b/src/main/resources/view/StatusBarFooter.fxml
@@ -12,7 +12,7 @@
   </columnConstraints>
   <Label fx:id="saveLocationStatus" style="-fx-background-color: #1C2050;">
       <font>
-         <Font name="Helvetica" size="13.0" />
+         <Font name="Arial" size="13.0" />
       </font></Label>
    <rowConstraints>
       <RowConstraints />
