--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -46,11 +46,11 @@
     -fx-min-height: 0;
     -fx-max-height: 0;
     -fx-alignment: center;
-    -fx-background-color: #383838;
 }
 
 .tab-pane .tab-header-area .tab-header-background {
     -fx-opacity: 1;
+    -fx-background-color: #63615c;
 }
 
 .tab-pane .tab {
@@ -59,7 +59,7 @@
 
 .tab-pane .tab:selected
 {
-    -fx-background-color: #383838;
+    -fx-background-color: #63615c;
 }
 
 .tab:selected .tab-label {
@@ -195,6 +195,7 @@
 
 .status-bar {
     -fx-background-color: derive(#1d1d1d, 30%);
+    -fx-border-radius: 20;
 }
 
 .result-display {
@@ -359,8 +360,13 @@
 }
 
 #cardPane {
-    -fx-background-color: transparent;
-    -fx-border-width: 0;
+    -fx-border-width: 1;
+    -fx-background-radius: 15;
+    -fx-border-radius: 15px;
+}
+
+#cardPane:hover {
+    -fx-border-color: #05d1e8;
 }
 
 #commandTypeLabel {
@@ -376,6 +382,8 @@
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 13pt;
     -fx-text-fill: white;
+    -fx-border-radius: 20;
+    -fx-background-radius: 20;
 }
 
 #filterField, #personListPanel, #personWebpage {
