Make upcoming events and logs not appear when empty

--- a/src/main/resources/view/ExpandedPersonListCard.fxml
+++ b/src/main/resources/view/ExpandedPersonListCard.fxml
@@ -26,6 +26,9 @@
                   <Insets bottom="5.0" />
                </padding>
                </Label>
+            <padding>
+               <Insets top="5.0" />
+            </padding>
       </HBox>
         <FlowPane fx:id="tags" />
        <Label fx:id="description" styleClass="cell_big_label" text="\$description" textOverrun="CLIP" wrapText="true">
@@ -48,16 +51,7 @@
             <font>
                <Font name="System Bold" size="13.0" />
             </font></Label>
-         <Label styleClass="cell_header_label" text="Upcoming Events:" wrapText="true">
-            <VBox.margin>
-               <Insets top="30.0" />
-            </VBox.margin>
-            <font>
-               <Font size="30.0" />
-            </font>
-         </Label>
-         <StackPane fx:id="upcomingEventsPanelPlaceholder" minHeight="-Infinity" prefHeight="100.0" />
-         <Label styleClass="cell_header_label" text="Logs:" wrapText="true">
+         <Label fx:id="eventsHeader" styleClass="cell_big_label" text="\$Upcoming Events:" wrapText="true">
             <VBox.margin>
                <Insets top="30.0" />
             </VBox.margin>
@@ -65,7 +59,16 @@
                <Font size="19.0" />
             </font>
          </Label>
-         <Label fx:id="logs" layoutX="25.0" layoutY="46.0" text="\\$logs" textOverrun="CLIP" wrapText="true">
+         <StackPane fx:id="upcomingEventsPanelPlaceholder" minHeight="-Infinity" prefHeight="100.0" />
+         <Label fx:id="logsHeader" styleClass="cell_big_label" text="\$Logs:" wrapText="true">
+            <VBox.margin>
+               <Insets top="30.0" />
+            </VBox.margin>
+            <font>
+               <Font size="19.0" />
+            </font>
+         </Label>
+         <Label fx:id="logs" layoutX="25.0" layoutY="46.0" text="\$logs" textOverrun="CLIP" wrapText="true">
             <padding>
                <Insets top="5.0" />
             </padding></Label>
