--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -365,22 +365,22 @@
     -fx-font-size: 12;
 }
 
-#labCard .list-view .scroll-bar:vertical .increment-arrow,
-.list-view .scroll-bar:vertical .decrement-arrow,
-.list-view .scroll-bar:vertical .increment-button,
-.list-view .scroll-bar:vertical .decrement-button {
+#labCard .scroll-bar:vertical .increment-arrow,
+#labCard .scroll-bar:vertical .decrement-arrow,
+#labCard .scroll-bar:vertical .increment-button,
+#labCard .scroll-bar:vertical .decrement-button {
     -fx-scale-x: 0;
     -fx-opacity: 0;
     -fx-padding:-7;
 }
 
-#labCard .list-view .scroll-bar:horizontal .increment-arrow,
-.list-view .scroll-bar:horizontal .decrement-arrow,
-.list-view .scroll-bar:horizontal .increment-button,
-.list-view .scroll-bar:horizontal .decrement-button {
+#labCard .scroll-bar:horizontal .increment-arrow,
+#labCard .scroll-bar:horizontal .decrement-arrow,
+#labCard .scroll-bar:horizontal .increment-button,
+#labCard .scroll-bar:horizontal .decrement-button {
     -fx-scale-x: 0;
     -fx-opacity: 0;
-    -fx-padding: -4;
+    -fx-padding: 2;
 }
 
 #labCard.list-view {
