--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -56,7 +56,7 @@
               <Image url="@../images/task_icon.png" />
             </image>
           </ImageView>
-          <Label fx:id="numOfTasks" styleClass="cell_small_label" text="\$numOfTasks" />
+          <Label fx:id="numOfTasks" styleClass="cell_small_label" text="\$numOfTasks" wrapText="true" />
         </children>
         <VBox.margin>
           <Insets left="5.0" right="5.0" top="3.0" />
