--- a/src/main/resources/view/AddTagWindowDark.css
+++ b/src/main/resources/view/AddTagWindowDark.css
@@ -8,11 +8,6 @@
     -fx-font-family: "Segoe UI Semibold";
 }
 
-#commandTypeLabel {
-    -fx-font-size: 11px;
-    -fx-text-fill: #F70D1A;
-}
-
 #tagNameInput {
     -fx-background-color: transparent #383838 transparent #383838;
     -fx-background-insets: 0;
@@ -22,6 +17,7 @@
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 11pt;
     -fx-text-fill: white;
+    -fx-prompt-text-fill: white
 }
 
 .result-display {
@@ -43,8 +39,9 @@
 .button {
     -fx-padding: 5 22 5 22;
     -fx-border-color: #e2e2e2;
-    -fx-border-width: 2;
-    -fx-background-radius: 0;
+    -fx-border-width: 1;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
     -fx-background-color: #1d1d1d;
     -fx-font-family: "Segoe UI", Helvetica, Arial, sans-serif;
     -fx-font-size: 11pt;
@@ -61,39 +58,29 @@
   -fx-text-fill: #1d1d1d;
 }
 
-.button:focused {
-    -fx-border-color: white, white;
-    -fx-border-width: 1, 1;
-    -fx-border-style: solid, segments(1, 1);
-    -fx-border-radius: 0, 0;
-    -fx-border-insets: 1 1 1 1, 0;
-}
-
-.button:disabled, .button:default:disabled {
-    -fx-opacity: 0.4;
-    -fx-background-color: #1d1d1d;
-    -fx-text-fill: white;
-}
-
-.button:default {
-    -fx-background-color: -fx-focus-color;
-    -fx-text-fill: #ffffff;
-}
-
-.button:default:hover {
-    -fx-background-color: derive(-fx-focus-color, 30%);
-}
-
 .toggle-button {
-  -fx-padding: 4;
-  -fx-border-color: white;
-  -fx-border-radius: 4;
-  -fx-border-width: 2;
-  -fx-background-color: derive(#1d1d1d, 20%);
+  -fx-wrap-text: true;
   -fx-border-insets: 5;
   -fx-text-fill: white;
+  -fx-background-color: #3e7b91;
+  -fx-padding: 1 3 1 3;
+  -fx-border-radius: 2;
+  -fx-background-radius: 2;
+  -fx-font-size: 15;
 }
 
 .toggle-button:selected {
-    -fx-background-color: black;
+  -fx-background-color: white;
+  -fx-text-fill: #3e7b91;
+}
+
+.currentTagsText {
+    -fx-fill: white;
+    -fx-font-size: 15;
+    -fx-font-family: "Segoe UI Light";
+}
+
+#tagsPane {
+    -fx-hgap: 10;
+    -fx-vgap:10
 }
