Incorporate peer review

--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -33,7 +33,8 @@
          <TextFlow fx:id="phone" />
          <TextFlow fx:id="address" layoutX="25.0" layoutY="46.0" />
          <TextFlow fx:id="email" layoutX="25.0" layoutY="46.0" />
-         <FlowPane fx:id="logs" layoutX="25.0" layoutY="46.0" />
+         <TextFlow fx:id="description" layoutX="25.0" layoutY="46.0" />
+      <FlowPane fx:id="logs" layoutX="25.0" layoutY="46.0" />
     </VBox>
       <rowConstraints>
          <RowConstraints />
