--- a/src/main/resources/view/ExpandedPersonListCard.fxml
+++ b/src/main/resources/view/ExpandedPersonListCard.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.TextFlow?>
 
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
   <GridPane HBox.hgrow="ALWAYS">
@@ -30,28 +31,12 @@
                <Insets top="5.0" />
             </padding>
       </HBox>
+        <TextFlow fx:id="phone" />
+        <TextFlow fx:id="address" layoutX="25.0" layoutY="46.0" />
+        <TextFlow fx:id="email" layoutX="25.0" layoutY="46.0" />
+        <TextFlow fx:id="description" />
         <FlowPane fx:id="tags" />
-       <Label fx:id="description" styleClass="cell_big_label" text="\$description" textOverrun="CLIP" wrapText="true">
-            <opaqueInsets>
-               <Insets />
-            </opaqueInsets>
-            <VBox.margin>
-               <Insets top="5.0" />
-            </VBox.margin>
-         </Label>
-      <Label fx:id="phone" styleClass="cell_big_label" text="\$phone" wrapText="true">
-            <font>
-               <Font name="System Bold" size="13.0" />
-            </font></Label>
-      <Label fx:id="address" styleClass="cell_big_label" text="\$address" wrapText="true">
-            <font>
-               <Font name="System Bold" size="13.0" />
-            </font></Label>
-      <Label fx:id="email" styleClass="cell_big_label" text="\$email" wrapText="true">
-            <font>
-               <Font name="System Bold" size="13.0" />
-            </font></Label>
-         <Label fx:id="eventsHeader" styleClass="cell_header_label" text="\$Upcoming Events:" wrapText="true">
+        <Label fx:id="eventsHeader" styleClass="cell_header_label" text="\$Upcoming Events:" wrapText="true">
             <VBox.margin>
                <Insets top="10.0" />
             </VBox.margin>
@@ -59,6 +44,8 @@
                <Font size="19.0" />
             </font>
          </Label>
+        <Label fx:id="noEventsText" styleClass="cell_header_label" text="\$No upcoming events:" wrapText="true">
+        </Label>
          <StackPane fx:id="upcomingEventsPanelPlaceholder" minHeight="-Infinity" prefHeight="100.0" />
          <Label fx:id="logsHeader" styleClass="cell_header_label" text="\$Logs:" wrapText="true">
             <VBox.margin>
