--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -412,7 +412,7 @@ src: url('../fonts/Montserrat-SemiBold.ttf');
 }
 
 #dietTag .label {
-    -fx-text-fill: white;
+    -fx-text-fill: black;
     -fx-background-color: #8479E1;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
