--- a/src/main/resources/view/OldDarkTheme.css
+++ b/src/main/resources/view/OldDarkTheme.css
@@ -3,8 +3,8 @@
 }
 
 .background {
-    -fx-background-color: #2B2B2B;
-    background-color: #2B2B2B; /* Used in the default.html file */
+    -fx-background-color: derive(#1d1d1d, 20%);
+    background-color: #383838; /* Used in the default.html file */
 }
 
 .label {
@@ -61,10 +61,10 @@
     -fx-border-width: 0 0 1 0;
     -fx-background-color: transparent;
     -fx-border-color:
-        transparent
-        transparent
-        derive(-fx-base, 80%)
-        transparent;
+            transparent
+            transparent
+            derive(-fx-base, 80%)
+            transparent;
     -fx-border-insets: 0 10 1 0;
 }
 
@@ -101,15 +101,18 @@
     -fx-label-padding: 0 0 0 0;
     -fx-graphic-text-gap : 0;
     -fx-padding: 0 0 0 0;
-    -fx-background-color: #222222;
 }
 
-.list-cell:filled {
-    -fx-border-color: #2B2B2B transparent #2B2B2B transparent;
+.list-cell:filled:even {
+    -fx-background-color: #3c3e3f;
+}
+
+.list-cell:filled:odd {
+    -fx-background-color: #515658;
 }
 
 .list-cell:filled:selected {
-    -fx-background-color: #2B2B2B;
+    -fx-background-color: #424d5f;
 }
 
 .list-cell:filled:selected #cardPane {
@@ -140,20 +143,21 @@
 }
 
 .stack-pane {
-     -fx-background-color: #2B2B2B;
+    -fx-background-color: derive(#1d1d1d, 20%);
 }
 
 .pane-with-border {
-     -fx-background-color: #2B2B2B;
-     -fx-border-top-width: 1px;
+    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-border-color: derive(#1d1d1d, 10%);
+    -fx-border-top-width: 1px;
 }
 
 .status-bar {
-    -fx-background-color: #2B2B2B;
+    -fx-background-color: derive(#1d1d1d, 30%);
 }
 
 .result-display {
-    -fx-background-color: #222222;
+    -fx-background-color: transparent;
     -fx-font-family: "sans-serif";
     -fx-font-size: 12pt;
     -fx-text-fill: white;
@@ -191,7 +195,7 @@
 }
 
 .context-menu {
-    -fx-background-color: derive(#2B2B2B, 20%);
+    -fx-background-color: derive(#1d1d1d, 50%);
 }
 
 .context-menu .label {
@@ -199,12 +203,11 @@
 }
 
 .menu-bar {
-    -fx-background-color: #2B2B2B;
-    -fx-spacing: 0;
+    -fx-background-color: derive(#1d1d1d, 20%);
 }
 
 .menu-bar .label {
-    -fx-font-size: 12pt;
+    -fx-font-size: 14pt;
     -fx-font-family: "sans-serif";
     -fx-text-fill: white;
     -fx-opacity: 0.9;
@@ -236,8 +239,8 @@
 }
 
 .button:pressed, .button:default:hover:pressed {
-  -fx-background-color: white;
-  -fx-text-fill: #1d1d1d;
+    -fx-background-color: white;
+    -fx-text-fill: #1d1d1d;
 }
 
 .button:focused {
@@ -298,21 +301,20 @@
 }
 
 .tab-pane .tab {
-    -fx-background-color: #2B2B2B;
+    -fx-background-color: derive(#1d1d1d, 10%);
+    -fx-background-radius: 8 8 0 0;
     -fx-focus-color: transparent;
-    -fx-border-radius: 0 0 3 0;
 }
 
 .tab-pane .tab:selected {
-    -fx-background-color: derive(#2B2B2B, 10%);
-    -fx-border-width: 0 0 3 0;
-    -fx-border-color: #FAF85D;
+    -fx-background-color: derive(#1d1d1d, 40%);
 }
 
 .tab-label {
     -fx-font-size: 12pt;
     -fx-font-family: "sans-serif";
     -fx-text-fill: derive(#1d1d1d, 90%);
+    -fx-opacity: 0.9;
 }
 
 .tab:selected .tab-label {
@@ -320,11 +322,11 @@
 }
 
 .scroll-bar {
-    -fx-background-color: #2B2B2B;
+    -fx-background-color: derive(#1d1d1d, 20%);
 }
 
 .scroll-bar .thumb {
-    -fx-background-color: derive(#2B2B2B, 20%);
+    -fx-background-color: derive(#1d1d1d, 50%);
     -fx-background-insets: 3;
 }
 
@@ -356,12 +358,13 @@
 }
 
 #commandTextField {
-    -fx-background-color: #222222;
+    -fx-background-color: transparent #383838 transparent #383838;
     -fx-background-insets: 0;
+    -fx-border-color: #383838 #383838 #ffffff #383838;
     -fx-border-insets: 0;
     -fx-border-width: 1;
     -fx-font-family: "sans-serif";
-    -fx-font-size: 12pt;
+    -fx-font-size: 13pt;
     -fx-text-fill: white;
 }
 
@@ -370,7 +373,7 @@
 }
 
 #resultDisplay .content {
-    -fx-background-color: #222222;
+    -fx-background-color: transparent, #383838, transparent, #383838;
     -fx-background-radius: 0;
 }
 
