Revert "Merge pull request #9 from AY2122S2-CS2103T-T09-4/develop"
This reverts commit 1d8598ed1fafb21d1b834211a4a4e740e8b3a767, reversing
changes made to d876af05f44dcf45c3b00700ba272601f74f7193.

--- a/src/main/resources/view/popup/PopupUpdateProduct.fxml
+++ b/src/main/resources/view/popup/PopupUpdateProduct.fxml
@@ -48,10 +48,10 @@
                     </VBox>
                     <VBox HBox.hgrow="ALWAYS">
                        <HBox spacing="3.0">
-                          <Label styleClass="field-label" text="Price"/>
+                          <Label styleClass="field-label" text="Category"/>
                           <Label alignment="CENTER" text="*" styleClass="alert"/>
                        </HBox>
-                       <TextField fx:id="price" promptText="3.33">
+                       <TextField fx:id="category" promptText="Noodles">
                           <VBox.margin>
                              <Insets top="5.0"/>
                           </VBox.margin>
@@ -59,9 +59,10 @@
                     </VBox>
                     <VBox HBox.hgrow="ALWAYS">
                        <HBox spacing="3.0">
-                          <Label styleClass="field-label" text="Category"/>
+                          <Label styleClass="field-label" text="Price"/>
+                          <Label alignment="CENTER" text="*" styleClass="alert"/>
                        </HBox>
-                       <TextField fx:id="category" promptText="Noodles">
+                       <TextField fx:id="price" promptText="3.33">
                           <VBox.margin>
                              <Insets top="5.0"/>
                           </VBox.margin>
