--- a/src/main/resources/view/table/ProductCard.fxml
+++ b/src/main/resources/view/table/ProductCard.fxml
@@ -24,6 +24,7 @@
         <Label fx:id="category" styleClass="table-column-long"/>
         <Label fx:id="price" styleClass="table-column-long"/>
         <Label fx:id="discount" styleClass="table-column-long"/>
+        <Label fx:id="quantity" styleClass="table-column-long" />
         <Label fx:id="description" styleClass="table-column-long" HBox.hgrow="ALWAYS"/>
         <HBox styleClass="table-column-long" alignment="CENTER">
             <Button alignment="CENTER" onMouseClicked="#handlePopupAddItem"
