--- a/src/main/resources/view/table/ProductTable.fxml
+++ b/src/main/resources/view/table/ProductTable.fxml
@@ -18,6 +18,7 @@
         <Label styleClass="table-column-long" text="CATEGORY"/>
         <Label styleClass="table-column-long" text="PRICE"/>
         <Label styleClass="table-column-long" text="DISCOUNT"/>
+        <Label styleClass="table-column-long" text="QUANTITY"/>
         <Label styleClass="table-column-long" text="DESCRIPTION" HBox.hgrow="ALWAYS"/>
         <Label styleClass="table-column-long" HBox.hgrow="NEVER"/>
     </HBox>
