--- a/src/main/resources/view/onboarding/OnboardingPrompt.fxml
+++ b/src/main/resources/view/onboarding/OnboardingPrompt.fxml
@@ -12,7 +12,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
-<fx:root resizable="false" title="Prompt" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<!--<fx:root resizable="false" title="Prompt" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">-->
+<fx:root title="Prompt" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" maxHeight="500.0">
   <icons>
     <Image url="@/images/info_icon.png" />
   </icons>
@@ -22,36 +23,37 @@
         <URL value="@../DarkTheme.css" />
       </stylesheets>
          <VBox>
-            <children>
-               <StackPane prefHeight="14.0" prefWidth="530.0" styleClass="pane-with-border">
-                  <children>
-                     <Label fx:id="displayMessage" styleClass="label-bright" text="Label" />
-                  </children>
-               </StackPane>
-            <HBox fx:id="helpMessageContainer" alignment="CENTER" style="-fx-background-color: #383838;">
-              <children>
-                     <AnchorPane>
-                        <HBox.margin>
-                           <Insets left="5.0" />
-                        </HBox.margin>
-                        <children>
-                      <Button fx:id="yesButton" mnemonicParsing="false" onAction="#handleYes" styleClass="button" text="Yes" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="20.0" />
-                        </children>
-                     </AnchorPane>
-                     <AnchorPane>
-                        <children>
-                           <Button fx:id="noButton" mnemonicParsing="false" onAction="#handleNo" text="No" AnchorPane.leftAnchor="20.0" />
-                        </children>
-                     </AnchorPane>
-              </children>
-              <opaqueInsets>
-                <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
-              </opaqueInsets>
-              <padding>
-                <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
-              </padding>
-            </HBox>
-            </children>
+             <children>
+                 <StackPane prefHeight="14.0" prefWidth="530.0" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
+                     <children>
+                         <Label fx:id="displayMessage" styleClass="label-bright" text="Label"/>
+                     </children>
+                 </StackPane>
+                 <!--            <HBox fx:id="helpMessageContainer" alignment="CENTER" style="-fx-background-color: #383838;" VBox.vgrow="ALWAYS" maxHeight="500.0">-->
+                 <HBox fx:id="helpMessageContainer" alignment="CENTER" style="-fx-background-color: #383838;" VBox.vgrow="ALWAYS" >
+                     <children>
+                         <AnchorPane>
+                             <HBox.margin>
+                                 <Insets left="5.0" />
+                             </HBox.margin>
+                             <children>
+                                 <Button fx:id="yesButton" mnemonicParsing="false" onAction="#handleYes" styleClass="button" text="Yes" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="20.0" />
+                             </children>
+                         </AnchorPane>
+                         <AnchorPane>
+                             <children>
+                                 <Button fx:id="noButton" mnemonicParsing="false" onAction="#handleNo" text="No" AnchorPane.leftAnchor="20.0" AnchorPane.bottomAnchor="0.0"/>
+                             </children>
+                         </AnchorPane>
+                     </children>
+                     <opaqueInsets>
+                         <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+                     </opaqueInsets>
+                     <padding>
+                         <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+                     </padding>
+                 </HBox>
+             </children>
          </VBox>
     </Scene>
   </scene>
